# incremental-sat-solver

./: Benchmark.hs  Funsat.hs  incremental-sat-solver.cabal
Data/Boolean/: DIMACS.hs  DPLL.hs  Dimacs.hs  Proposition.hs  SatSolver.hs  SimpleSAT.hs
