Name:          incremental-sat-solver
Version:       0.2.0
Cabal-Version: >= 1.6
Synopsis:      Simple, Incremental SAT Solving as a Library
Description:   This Haskell library provides an implementation of the
               Davis-Putnam-Logemann-Loveland algorithm
               (cf. <http://en.wikipedia.org/wiki/DPLL_algorithm>) for
               the boolean satisfiability problem. It not only allows
               to solve boolean formulas in one go but also to add
               constraints and query bindings of variables
               incrementally.
Category:      Algorithms
License:       BSD3
License-File:  LICENSE
Author:        Sebastian Fischer
Maintainer:    sebf@informatik.uni-kiel.de
Bug-Reports:   mailto:sebf@informatik.uni-kiel.de
Homepage:      http://github.com/sebfisch/incremental-sat-solver
Build-Type:    Simple
Stability:     experimental

Extra-Source-Files: README, Benchmark.hs, Funsat.hs

Library
  Build-Depends:    base, containers, mtl
  Exposed-Modules:  Data.Boolean.Proposition, Data.Boolean.SatSolver, Data.Boolean.DIMACS, Data.Boolean.SimpleSAT, Data.Boolean.DPLL

  Other-Modules:    
  Ghc-Options:      -Wall -funbox-strict-fields -O2

Source-Repository head
  type:     git
  location: git://github.com/sebfisch/incremental-sat-solver.git

